Modificando notfound y agregando formulario de comentarios

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,7 +1,13 @@
 
 <div class="container">
   <div class="row">
-    <img src="https://media.istockphoto.com/vectors/internet-error-message-404-page-not-found-with-a-broken-robot-cartoon-vector-id1131797145" width="20" height="20" class="img-fluid" alt="ERROR-404">
+    <h1 class="text-center">ERROR 404</h1>
+    <p class="text-center">Page not found</p>
+  </div>
+  <div class="row">
+    <div class="d-flex justify-content-center">
+      <button type="submit" class="btn btn-primary btn-lg" routerLink="/Home">Ir a Home</button>
+    </div>
   </div>
 </div>
 
