--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -72,4 +72,47 @@
     </div>
   </div>
 </div>
+
+<hr>
+<div class="container">
+  <div class="row">
+      <div class="col-md-12">
+          <div class="well well-sm">
+              <form class="form-horizontal" method="post">
+                  <fieldset>
+                      <legend class="text-center header">Contact us</legend>
+
+                      <div class="form-group">
+                          <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-person-fill bigicon">Usuario</i></span>
+                          <div class="col-md-8">
+                              <input id="fname" name="name" type="text" placeholder="User" class="form-control">
+                          </div>
+                      </div>
+
+                      <div class="form-group">
+                          <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-envelope-at-fill bigicon">Correo Electronico</i></span>
+                          <div class="col-md-8">
+                              <input id="email" name="email" type="text" placeholder="Email Address" class="form-control">
+                          </div>
+                      </div>
+
+                      <div class="form-group">
+                          <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-chat-dots-fill bigicon">Comentarios</i></span>
+                          <div class="col-md-8">
+                              <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days." rows="7"></textarea>
+                          </div>
+                      </div>
+                      <br>
+                      <div class="form-group">
+                          <div class="col-md-12 text-center">
+                              <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
+                          </div>
+                      </div>
+                  </fieldset>
+              </form>
+          </div>
+      </div>
+  </div>
+</div>
+
 </div>
