Modificar footer, home, carrusel

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,7 +9,7 @@
         <img src="assets/Images/Logo.png" alt="Logo">
       </div>
       <div class="col">
-         <h1 class="text-center">SIGUENOS EN</h1>
+         <p class="text-center">SIGUENOS EN</p>
          <div class="d-flex justify-content-center">
           <div class="col">
             <a class="facebook-link" href="https://www.facebook.com/"><i class="bi bi-facebook bi-lg">Facebook</i></a>
@@ -22,18 +22,22 @@
           </div>
          </div>
       </div>
-      <div class="col">
-        <h1 class="text-center">SUSCRIBETE</h1>
-        <div class="mb-3 text-center">
-          <label for="exampleFormControlInput1" class="form-label d-block">Correo Electrónico</label>
-          <div class="d-inline-block">
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" style="width: 200px;">
-          </div>
+      <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <p>INICIO DE SECCION</p>
+            </div>
         </div>
-        <div class="d-flex justify-content-center">
-          <button type="submit" class="btn btn-success">SUSCRIBETE</button>
+        <div class="row">
+            <div class="col text-end">
+                <button type="submit" class="btn btn-success">Sign Up</button>
+            </div>
+            <div class="col text-start">
+                <button type="submit" class="btn btn-success">Login</button>
+            </div>
         </div>
-      </div>
+    </div>
+
      </div>
      <hr>
      <div class="row">
