--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-<div class="container contenido-principal">
 <div class="row">
   <app-carrousel></app-carrousel>
 </div>
@@ -37,11 +36,11 @@
       <div class="card flip-card" style="width: 18rem;">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="assets/Images/Mapa.jpg" class="card-img-top img-fluid" alt="Mapa" style="width: 304px; height: 236px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Video-Game-Controller-Icon-IDV-green.svg/2048px-Video-Game-Controller-Icon-IDV-green.svg.png" class="card-img-top img-fluid" alt="Mapa" style="width: 304px; height: 236px;">
           </div>
           <div class="flip-card-back">
             <div class="card-body">
-              <h5 class="card-title">MAPA</h5>
+              <h5 class="card-title">JUEGO</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <div class="d-flex justify-content-center">
                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -80,7 +79,7 @@
           <div class="well well-sm">
               <form class="form-horizontal" method="post">
                   <fieldset>
-                      <legend class="text-center header">Contact us</legend>
+                      <legend class="text-center header">Comentarios</legend>
 
                       <div class="form-group">
                           <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-person-fill bigicon">Usuario</i></span>
@@ -99,7 +98,7 @@
                       <div class="form-group">
                           <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-chat-dots-fill bigicon">Comentarios</i></span>
                           <div class="col-md-8">
-                              <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days." rows="7"></textarea>
+                              <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days." rows="7" style="resize: none;"></textarea>
                           </div>
                       </div>
                       <br>
@@ -115,4 +114,3 @@
   </div>
 </div>
 
-</div>
