--- a/src/app/carrousel/carrousel.component.html
+++ b/src/app/carrousel/carrousel.component.html
@@ -10,17 +10,39 @@
       </div>
     </slide>
     <slide>
-      <img src="https://pm1.aminoapps.com/6198/14a5e486ef130d9705cffad1a17888d27d79e1ce_hq.jpg" alt="Slide 2" class="d-block w-100 " style="height: 300px;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5 class="text-dark">Slide 2</h5>
-        <p class="text-dark">Texto para la imagen 2.</p>
+      <div>
+        <img src="https://pm1.aminoapps.com/6198/14a5e486ef130d9705cffad1a17888d27d79e1ce_hq.jpg" alt="Slide 2" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark">Slide 2</h5>
+          <p class="text-dark">Texto para la imagen 2.</p>
+        </div>
       </div>
     </slide>
     <slide>
-      <img src="https://lafrikileria.com/blog/wp-content/uploads/2023/07/robots-mecha-japoneses-anime.jpg" alt="Slide 3" class="d-block w-100 " style="height: 300px;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5 class="text-dark">Slide 3</h5>
-        <p class="text-dark">Texto para la imagen 3.</p>
+      <div>
+        <img src="https://lafrikileria.com/blog/wp-content/uploads/2023/07/robots-mecha-japoneses-anime.jpg" alt="Slide 3" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark">Slide 3</h5>
+          <p class="text-dark">Texto para la imagen 3.</p>
+        </div>
+      </div>
+    </slide>
+    <slide>
+      <div>
+        <img src="assets/Images/Paisaje.png" alt="Slide 3" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark">Slide 4</h5>
+          <p class="text-dark">Paisaje.</p>
+        </div>
+      </div>
+    </slide>
+    <slide>
+      <div>
+        <img src="https://gifsec.com/wp-content/uploads/2022/11/dark-anime-gif-1.gif" alt="Slide 3" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark">Slide 5</h5>
+          <p class="text-dark">Texto para la Imagen 5.</p>
+        </div>
       </div>
     </slide>
   </carousel>
