--- a/src/app/nadvar/nadvar.component.html
+++ b/src/app/nadvar/nadvar.component.html
@@ -16,10 +16,12 @@
           <a class="nav-link active Ayuda-link" routerLink="/Ayuda"><i class="bi bi-question-octagon"><b>Help</b></i></a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
-      </form>
+      <div>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+        </form>
+      </div>
     </div>
   </div>
 </nav>
