modificando home, nadvar fijo, history, ajustando las paginas

--- a/src/app/historia/historia.component.html
+++ b/src/app/historia/historia.component.html
@@ -6,5 +6,12 @@
     <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
   </form>
 </div>
-
+<br>
+<div class="row">
+  <div class="col">
+    <img src="https://m.media-amazon.com/images/I/51ehjoSZqiL._SL500_.jpg" alt="">
+    <p>Psicología Oscura [Dark Psychology]</p>
+    <button class="btn btn-primary">Vista previa</button>
+  </div>
+</div>
 
