--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
               <h5 class="card-title">LIBRO</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <div class="d-flex justify-content-center">
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Abrir</a>
               </div>
             </div>
           </div>
@@ -43,7 +43,7 @@
               <h5 class="card-title">JUEGO</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <div class="d-flex justify-content-center">
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Abrir</a>
               </div>
             </div>
           </div>
@@ -62,7 +62,7 @@
               <h5 class="card-title">PAGO</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <div class="d-flex justify-content-center">
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Abrir</a>
               </div>
             </div>
           </div>
@@ -79,7 +79,7 @@
           <div class="well well-sm">
               <form class="form-horizontal" method="post">
                   <fieldset>
-                      <legend class="text-center header">Comentarios</legend>
+                      <legend class="text-center header">Deja un Comentario</legend>
 
                       <div class="form-group">
                           <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-person-fill bigicon">Usuario</i></span>
@@ -98,7 +98,7 @@
                       <div class="form-group">
                           <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-chat-dots-fill bigicon">Comentarios</i></span>
                           <div class="col-md-8">
-                              <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days." rows="7" style="resize: none;"></textarea>
+                              <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here." rows="7" style="resize: none;"></textarea>
                           </div>
                       </div>
                       <br>
