agregando pagina login, registro, ajustando la pagina

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -30,10 +30,10 @@
         </div>
         <div class="row">
             <div class="col text-end">
-                <button type="submit" class="btn btn-success">Sign Up</button>
+                <button type="submit" class="btn btn-success" routerLink="/Sing up">Sign Up</button>
             </div>
             <div class="col text-start">
-                <button type="submit" class="btn btn-success">Login</button>
+                <button type="submit" class="btn btn-success" routerLink="/Login">Login</button>
             </div>
         </div>
     </div>
