--- a/src/app/historia/historia.component.html
+++ b/src/app/historia/historia.component.html
@@ -9,8 +9,8 @@
 <br>
 <div class="row">
   <div class="col">
-    <img src="https://m.media-amazon.com/images/I/51ehjoSZqiL._SL500_.jpg" alt="">
-    <p>Psicología Oscura [Dark Psychology]</p>
+    <img src="https://pm1.aminoapps.com/6198/14a5e486ef130d9705cffad1a17888d27d79e1ce_hq.jpg" alt="">
+    <p>Ciudad Anime</p>
     <button class="btn btn-primary">Vista previa</button>
   </div>
 </div>
