--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="fondo-imagen">
   <app-nadvar></app-nadvar>
+  <div class="container-fluid">
     <router-outlet></router-outlet>
-  <app-footer></app-footer>
+    <app-footer></app-footer>
+  </div>
 </div>
 
 
