--- a/src/app/historia/historia.component.html
+++ b/src/app/historia/historia.component.html
@@ -7,11 +7,16 @@
   </form>
 </div>
 <br>
+
 <div class="row">
-  <div class="col">
-    <img src="https://pm1.aminoapps.com/6198/14a5e486ef130d9705cffad1a17888d27d79e1ce_hq.jpg" alt="">
-    <p>Ciudad Anime</p>
-    <button class="btn btn-primary">Vista previa</button>
+    <div class="col-4" *ngFor="let manga of listamangas">
+      <div class="alert alert-primary" role="alert">
+      <img [src]="manga.small_image_url" alt="">
+      <p class="text-center"><b>{{ manga.title }}</b></p>
+      <p>{{manga.synopsis}}</p>
+      <button class="btn btn-primary">Vista previa</button>
+    </div>
   </div>
 </div>
+
 
