--- a/src/app/nadvar/nadvar.component.html
+++ b/src/app/nadvar/nadvar.component.html
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-center">
         <li class="nav-item">
           <a class="nav-link active history-link" routerLink="/Historia"><i class="bi bi-book-half"><b>History</b></i></a>
         </li>
@@ -22,4 +22,7 @@
     </div>
   </div>
 </nav>
+
+
+
 
