--- a/src/app/page/registro/registro.component.html
+++ b/src/app/page/registro/registro.component.html
@@ -1,1 +1,28 @@
-<p>registro works!</p>
+<div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+  <div class="alert alert-primary" role="alert">
+    <p class="text-center"><b>REGISTRO</b></p>
+    <img src="assets/Images/Logo.png" alt="">
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Usuario</label>
+        <div class="col-lg-25">
+          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <div class="col-lg-25">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <div class="col-lg-25">
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+      </div>
+      <br>
+      <button type="submit" class="btn btn-success w-100">Registrarse</button>
+    </form>
+  </div>
+</div>
