--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -1,9 +1,66 @@
-<h1 class="text-center">¿Hola en que podemos ayudar?</h1>
+<div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators container-fluid">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://www.alura.com.br/artigos/assets/html-css-js/imagem-1.png" class="d-block w-100" alt="..." style="height: 350px;">
+      <div class="carousel-caption d-none d-md-block">
+        <h5 class="text-dark">First slide label</h5>
+        <p class="text-dark">Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.ctfassets.net/c63hsprlvlya/6dRcoWOuzvM4HBuvHBCyow/2d0c350d12a57051d027895ff8db7bba/what-is-micro-frontend.webp" class="d-block w-100" alt="..." style="height: 350px;">
+      <div class="carousel-caption d-none d-md-block">
+        <h5 class="text-dark">Second slide label</h5>
+        <p class="text-dark">Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.suratica.es/wp-content/uploads/2020/10/que-es-el-backend-y-que-es-el-frontend-1.jpg" class="d-block w-100" alt="..." style="height: 350px;">
+      <div class="carousel-caption d-none d-md-block">
+        <h5 class="text-dark">Third slide label</h5>
+        <p class="text-dark">Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<h1>¿Hola en que podemos ayudar?</h1>
 <hr>
 <div class="d-flex justify-content-center">
   <img src="https://w7.pngwing.com/pngs/358/741/png-transparent-product-manuals-safety-system-owner-s-manual-organization-royal-signmanual.png" width="200" height="150" alt="">
 </div>
 <br>
 <div class="d-flex justify-content-center">
-  <button type="submit" class="btn btn-success"><i class="bi bi-book-fill">ABRIR MANUAL</i></button>
+  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="bi bi-book-fill">ABRIR MANUAL</i></button>
+</div>
+<div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Conocenos</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <img src="assets/Images/Logo.png" alt="">
+  <div class="offcanvas-body">
+    <p>Try scrolling the rest of the page to see this option in action.</p>
+    <div class="row">
+      <a class="facebook-link" href="https://www.facebook.com/"><i class="bi bi-facebook bi-lg">Facebook</i></a>
+    </div>
+    <div class="row">
+      <a class="whatsapp-link" href="https://web.whatsapp.com/"><i class="bi bi-whatsapp bi-lg">Whatsapp</i></a>
+    </div>
+    <div class="row">
+      <a class="youtube-link" href="https://www.youtube.com/"><i class="bi bi-youtube  bi-lg">Youtube</i></a>
+    </div>
+  </div>
 </div>
