--- a/src/app/historia/historia.component.html
+++ b/src/app/historia/historia.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center">historia</h1>
+<h1 style="text-align: center;">Encuentra las mejores historias</h1>
 <div class="mb-3 d-flex justify-content-center">
   <form class="d-flex" role="search">
     <p>Buscar</p>
@@ -11,10 +11,13 @@
 <div class="row">
     <div class="col-4" *ngFor="let manga of listamangas">
       <div class="alert alert-primary" role="alert">
-      <img [src]="manga.small_image_url" alt="">
-      <p class="text-center"><b>{{ manga.title }}</b></p>
-      <p>{{manga.synopsis}}</p>
-      <button class="btn btn-primary">Vista previa</button>
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Lectura</button>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body">
+            <p class="text-center"><b>{{ manga.title }}</b></p>
+            <p>{{manga.synopsis}}</p>
+          </div>
+        </div>
     </div>
   </div>
 </div>
