--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -77,34 +77,43 @@
   <div class="row">
       <div class="col-md-12">
           <div class="well well-sm">
-              <form class="form-horizontal" method="post">
+              <form [formGroup] = "nuevocomentario" (submit) = "guardarcomentario()" class="form-horizontal" method="post">
                   <fieldset>
                       <legend class="text-center header">Deja un Comentario</legend>
 
                       <div class="form-group">
                           <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-person-fill bigicon">Usuario</i></span>
                           <div class="col-md-8">
-                              <input id="fname" name="name" type="text" placeholder="User" class="form-control">
+                              <input formControlName = "usuario" id="fname"  name="user" type="text" placeholder="User" class="form-control">
+                              <span *ngIf="nuevocomentario.get('usuario')?.invalid && nuevocomentario.get('usuario')?.touched" class="text-danger">Ingrese el Usuario</span>
                           </div>
                       </div>
 
                       <div class="form-group">
                           <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-envelope-at-fill bigicon">Correo Electronico</i></span>
                           <div class="col-md-8">
-                              <input id="email" name="email" type="text" placeholder="Email Address" class="form-control">
+                              <input id="email" name="email" type="text" placeholder="Email Address" class="form-control" formControlName="correo">
+                              <span *ngIf="nuevocomentario.get('correo')?.invalid && nuevocomentario.get('correo')?.touched" class="text-danger">Ingrese el Correo</span>
                           </div>
                       </div>
-
+                      <div class="form-group">
+                        <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-calendar bigicon">Fecha</i></span>
+                        <div class="col-md-8">
+                          <input type="datetime-local" class="form-control" id="fecha1" formControlName="fecha">
+                          <span *ngIf="nuevocomentario.get('fecha')?.invalid && nuevocomentario.get('fecha')?.touched" class="text-danger">Seleccione la fecha</span>
+                        </div>
+                      </div>
                       <div class="form-group">
                           <span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-chat-dots-fill bigicon">Comentarios</i></span>
                           <div class="col-md-8">
-                              <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here." rows="7" style="resize: none;"></textarea>
+                              <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here." rows="7" style="resize: none;" formControlName="comentario"></textarea>
+                              <span *ngIf="nuevocomentario.get('comentario')?.invalid && nuevocomentario.get('comentario')?.touched" class="text-danger">Ingrese un comentario</span>
                           </div>
                       </div>
                       <br>
                       <div class="form-group">
                           <div class="col-md-12 text-center">
-                              <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
+                              <button type="submit" class="btn btn-primary btn-lg" [disabled]="nuevocomentario.invalid">Enviar</button>
                           </div>
                       </div>
                   </fieldset>
