--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-
+<div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
 <div class="container">
   <div class="row">
     <h1 class="text-center">ERROR 404</h1>
@@ -9,6 +9,7 @@
       <button type="submit" class="btn btn-primary btn-lg" routerLink="/Home">Ir a Home</button>
     </div>
   </div>
+</div>
 </div>
 
 
