--- a/src/app/page/registro/registro.component.html
+++ b/src/app/page/registro/registro.component.html
@@ -2,27 +2,30 @@
   <div class="alert alert-primary" role="alert">
     <p class="text-center"><b>REGISTRO</b></p>
     <img src="assets/Images/Logo.png" alt="">
-    <form>
+    <form [formGroup] = "registro" (submit) = "Registro()">
       <div class="form-group">
         <label for="exampleInputEmail1">Usuario</label>
         <div class="col-lg-25">
-          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User">
+          <input formControlName = "usuario" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User">
+          <span *ngIf="registro.get('usuario')?.invalid && registro.get('usuario')?.touched" class="text-danger">Ingrese un nombre de usuario</span>
         </div>
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <div class="col-lg-25">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <input  formControlName = "correo" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <span *ngIf="registro.get('correo')?.invalid && registro.get('correo')?.touched" class="text-danger">Ingrese su correo</span>
         </div>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
         <div class="col-lg-25">
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          <input formControlName = "contraseña" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          <span *ngIf="registro.get('contraseña')?.invalid && registro.get('contraseña')?.touched" class="text-danger">Ingrese una contraseña</span>
         </div>
       </div>
       <br>
-      <button type="submit" class="btn btn-success w-100">Registrarse</button>
+      <button type="submit" class="btn btn-success w-100" [disabled]="registro.invalid">Registrarse</button>
     </form>
   </div>
 </div>
