boton para idioma, mejorar el login, realizando el  control para busqueda

--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -43,7 +43,7 @@
 </div>
 <br>
 <div class="d-flex justify-content-center">
-  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="bi bi-book-fill">ABRIR MANUAL</i></button>
+  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="bi bi-book-fill">MAS INFORMACION</i></button>
 </div>
 <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
   <div class="offcanvas-header">
