--- a/src/app/nadvar/nadvar.component.html
+++ b/src/app/nadvar/nadvar.component.html
@@ -1,21 +1,31 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/Home"><img src="../../assets/Images/Logo.png" width="90" height="90" alt="..."></a>
+    <a class="navbar-brand" routerLink="/Home"><img [src]="logo" width="90" height="90" alt="..."></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active history-link" routerLink="/Historia"><i class="bi bi-book-half"><b>History</b></i></a>
+          <a class="nav-link active history-link" routerLink="/Historia"><i class="bi bi-book-half"><b>{{'History'|translate}}</b></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active Ayuda-link" routerLink="/Ayuda"><i class="bi bi-question-octagon"><b>Help</b></i></a>
+          <a class="nav-link active Ayuda-link" routerLink="/Ayuda"><i class="bi bi-question-octagon"><b>{{'Help'|translate}}</b></i></a>
         </li>
       </ul>
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+
+            <select class="form-select" (change)="ChangeLang($event)" name="" id="">
+                <option [selected]="lang==='en'" value="en">English</option>
+                <option [selected]="lang==='fr'" value="fr">Français</option>
+                <option [selected]="lang==='es'" value="es">Español</option>
+            </select>
+        </li>
+    </ul>
       <div>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <input class="form-control me-2" type="search" placeholder="{{'search'|translate}}" aria-label="Search">
           <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
         </form>
       </div>
