--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,15 +1,19 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 90vh;
 }
 
-/* Estilos para el footer */
+.contenedor {
+  position: relative;
+  width: 210.5vh;
+}
+
 footer {
   margin-top: auto;
-  background-color: #233c6d;
   color: white;
   padding: 20px 0;
+  background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%);
 }
 
 footer a {
@@ -24,13 +28,54 @@ footer a:hover {
 .facebook-link,
 .whatsapp-link,
 .youtube-link {
-  font-size: 16px; /* Puedes ajustar el tamaño según tus preferencias */
-  transition: font-size 0.3s ease; /* Animación de transición */
+  font-size: 16px;
+  transition: font-size 0.3s ease;
 }
 
-/* Animación al pasar el cursor */
+
 .facebook-link:hover,
 .whatsapp-link:hover,
 .youtube-link:hover {
-  font-size: 25px; /* Tamaño más grande al pasar el cursor */
+  font-size: 25px;
 }
+
+button{
+  background-color: black;
+  cursor:pointer;
+  border: none;
+  padding: 16px 32px;
+  color: #FFF;
+  font-size: 10px;
+  font-weight: bold;
+  position: relative;
+  border-radius: 12px;
+}
+
+button::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg,
+  red,blue,deeppink,blue,red, blue,deeppink, blue);
+  background-size: 800%;
+  border-radius: 10px;
+  filter: blur(8px);
+  animation: glowing 25s linear infinite;
+}
+
+@keyframes glowing {
+  0%{
+    background-position: 0 0;
+  }
+  50%{
+    background-position: 400% 0;
+  }
+  100%{
+    background-position: 0 0;
+  }
+}
+
