--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,51 +1,51 @@
-<div class="wrapper">
-  <!-- Todo tu contenido va aquí -->
-  <div class="container my-5">
+<div class="wrapper contenedor">
+<footer class="bg-body-tertiary text-center">
+  <div class="col">
+    <img src="assets/Images/Logo.png" alt="Logo">
   </div>
-  <!-- Footer -->
-  <footer class="text-center text-lg-start">
-     <div class="row">
-      <div class="col">
-        <img src="assets/Images/Logo.png" alt="Logo">
-      </div>
-      <div class="col">
-         <p class="text-center">SIGUENOS EN</p>
-         <div class="d-flex justify-content-center">
-          <div class="col">
-            <a class="facebook-link" href="https://www.facebook.com/"><i class="bi bi-facebook bi-lg">Facebook</i></a>
-          </div>
-          <div class="col">
-            <a class="whatsapp-link" href="https://web.whatsapp.com/"><i class="bi bi-whatsapp bi-lg">Whatsapp</i></a>
-          </div>
-          <div class="col">
-            <a class="youtube-link" href="https://www.youtube.com/"><i class="bi bi-youtube  bi-lg">Youtube</i></a>
-          </div>
-         </div>
-      </div>
-      <div class="container">
-        <div class="row">
-            <div class="col-12 text-center">
-                <p>INICIO DE SECCION</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col text-end">
-                <button type="submit" class="btn btn-success" routerLink="/Singup">Sign Up</button>
-            </div>
-            <div class="col text-start">
-                <button type="submit" class="btn btn-success" routerLink="/Login">Login</button>
-            </div>
-        </div>
-    </div>
+  <div class="container p-4">
+    <section class="mb-4">
+      <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1 facebook-link" href="https://www.facebook.com/" role="button"
+        ><i class="bi bi-facebook bi-lg"></i></a>
 
-     </div>
-     <hr>
-     <div class="row">
-      <div class="d-flex justify-content-center">
-        <p>Copyright © 2023 HubSpot, Inc.</p>
+      <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1 whatsapp-link" href="https://web.whatsapp.com/" role="button"
+        ><i class="bi bi-whatsapp bi-lg"></i></a>
+
+      <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1 youtube-link" href="https://www.youtube.com/" role="button"
+        ><i class="bi bi-youtube  bi-lg"></i></a>
+
+    </section>
+
+    <section class="">
+      <form action="">
+        <div class="row">
+          <div class="col-12 text-center">
+              <p>{{'InfoF2'|translate}}</p>
+          </div>
       </div>
-     </div>
-  </footer>
-  <!-- Footer -->
+        <div class="row">
+          <div class="col text-end">
+              <button type="submit" class="btn btn-outline-success" routerLink="/Singup">{{'InfoF3'|translate}}</button>
+          </div>
+          <div class="col text-start">
+              <button type="submit" class="btn btn-outline-success" routerLink="/Login">{{'InfoF4'|translate}}</button>
+          </div>
+      </div>
+      </form>
+    </section>
+    <br>
+    <section class="mb-4">
+      <p>
+        La historia es la ciencia social encargada de estudiar
+        los eventos del pasado de la humanidad a través de distintas
+         metodologías que analizan el contexto social, político, económico,
+         geográfico y psicológico del hombre a través de su entorno.
+      </p>
+    </section>
+  </div>
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+    Copyright © 2023 HubSpot, Inc.
+  </div>
+</footer>
 </div>
-<!-- End of .wrapper -->
+
