--- a/src/app/help/help.component.css
+++ b/src/app/help/help.component.css
@@ -1,4 +1,5 @@
 h1{
+  color:blue;
   display: block;
   font-family: monospace;
   white-space: nowrap;
@@ -15,3 +16,5 @@ h1{
 @keyframes blink {
   50% {border-color: transparent;}
 }
+
+
