--- a/src/app/nadvar/nadvar.component.css
+++ b/src/app/nadvar/nadvar.component.css
@@ -24,3 +24,48 @@ a:hover {
   color: #07d544;
   cursor: pointer;
 }
+.selectAltura {
+  display:block;
+  height:47px;
+  width:180px;
+}
+
+button{
+  background-color: black;
+  cursor:pointer;
+  border: none;
+  padding: 16px 32px;
+  color: #FFF;
+  font-size: 10px;
+  font-weight: bold;
+  position: relative;
+  border-radius: 12px;
+}
+
+button::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg,
+  red,blue,deeppink,blue,red, blue,deeppink, blue);
+  background-size: 800%;
+  border-radius: 10px;
+  filter: blur(8px);
+  animation: glowing 25s linear infinite;
+}
+
+@keyframes glowing {
+  0%{
+    background-position: 0 0;
+  }
+  50%{
+    background-position: 400% 0;
+  }
+  100%{
+    background-position: 0 0;
+  }
+}
