--- a/src/app/nadvar/nadvar.component.html
+++ b/src/app/nadvar/nadvar.component.html
@@ -10,24 +10,28 @@
           <a class="nav-link active history-link" routerLink="/Historia"><i class="bi bi-book-half"><b>{{'History'|translate}}</b></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active Ayuda-link" routerLink="/Ayuda"><i class="bi bi-question-octagon"><b>{{'Help'|translate}}</b></i></a>
+          <a class="nav-link active Ayuda-link" routerLink="/Informacion"><i class="bi bi-question-octagon"><b>{{'Information'|translate}}</b></i></a>
         </li>
       </ul>
-      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-        <li class="nav-item">
 
-            <select class="form-select" (change)="ChangeLang($event)" name="" id="">
-                <option [selected]="lang==='en'" value="en">English</option>
-                <option [selected]="lang==='fr'" value="fr">Français</option>
-                <option [selected]="lang==='es'" value="es">Español</option>
-            </select>
-        </li>
-    </ul>
-      <div>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="{{'search'|translate}}" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
-        </form>
+      <div class="d-flex justify-content-center align-items-center">
+        <div class="mb-3 d-flex">
+          <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <select class="form-select zonal_select selectAltura" (change)="ChangeLang($event)" name="" id="">
+                <option [selected]="lang==='en'" value="en">English </option>
+                <option [selected]="lang==='fr'" value="fr">Français </option>
+                <option [selected]="lang==='es'" value="es">Español </option>
+              </select>
+            </li>
+        </ul>
+          <form class="d-flex" role="search">
+            <div class="input-group">
+              <input id="searchQuery" name="searchQuery"  class="form-control" type="search" placeholder="{{'search'|translate}}" aria-label="Search" style="width: 350px;">
+              <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
