--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,12 +1,12 @@
 <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
 <div class="container">
   <div class="row">
-    <h1 class="text-center">ERROR 404</h1>
-    <p class="text-center">Page not found</p>
+    <h1 class="text-center">{{'InfoNF'|translate}}</h1>
+    <p class="text-center">{{'InfoNF2'|translate}}</p>
   </div>
   <div class="row">
     <div class="d-flex justify-content-center">
-      <button type="submit" class="btn btn-primary btn-lg" routerLink="/Home">Ir a Home</button>
+      <button type="submit" class="btn btn-outline-primary" routerLink="/Home">{{'InfoNF3'|translate}}</button>
     </div>
   </div>
 </div>
