--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,7 +60,7 @@
           </div>
           <div class="flip-card-back">
             <div class="card-body">
-              <h5 class="card-title">{{'PAY'|translate}}</h5>
+              <h5 class="card-title">{{'News'|translate}}</h5>
               <p class="card-text">{{parrafo}}</p>
               <div class="d-flex justify-content-center">
                 <a href="#" class="btn btn-primary">Abrir</a>
