Modificando codigo, agragndo contenido books, news, play

--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -69,13 +69,13 @@
   <div class="offcanvas-body">
     <p>Try scrolling the rest of the page to see this option in action.</p>
     <div class="row">
-      <a class="facebook-link" href="https://www.facebook.com/"><i class="bi bi-facebook bi-lg">Facebook</i></a>
+      <a target="_blank" class="facebook-link" href="https://www.facebook.com/"><i class="bi bi-facebook bi-lg">Facebook</i></a>
     </div>
     <div class="row">
-      <a class="whatsapp-link" href="https://web.whatsapp.com/"><i class="bi bi-whatsapp bi-lg">Whatsapp</i></a>
+      <a target="_blank" class="whatsapp-link" href="https://web.whatsapp.com/"><i class="bi bi-whatsapp bi-lg">Whatsapp</i></a>
     </div>
     <div class="row">
-      <a class="youtube-link" href="https://www.youtube.com/"><i class="bi bi-youtube  bi-lg">Youtube</i></a>
+      <a target="_blank" class="youtube-link" href="https://www.youtube.com/"><i class="bi bi-youtube  bi-lg">Youtube</i></a>
     </div>
   </div>
 </div>
