--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,13 +2,13 @@
 <footer class="bg-body-tertiary text-center">
   <div class="container p-4">
     <section class="mb-4">
-      <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1 facebook-link" href="https://www.facebook.com/" role="button"
+      <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1 facebook-link" target="_blank" href="https://www.facebook.com/" role="button"
         ><i class="bi bi-facebook bi-lg"></i></a>
 
-      <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1 whatsapp-link" href="https://web.whatsapp.com/" role="button"
+      <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1 whatsapp-link" target="_blank" href="https://web.whatsapp.com/" role="button"
         ><i class="bi bi-whatsapp bi-lg"></i></a>
 
-      <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1 youtube-link" href="https://www.youtube.com/" role="button"
+      <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1 youtube-link" target="_blank" href="https://www.youtube.com/" role="button"
         ><i class="bi bi-youtube  bi-lg"></i></a>
 
     </section>
