--- a/src/app/home/books/books.component.html
+++ b/src/app/home/books/books.component.html
@@ -1,1 +1,25 @@
-<p>books works!</p>
+<h1 class="text-center">{{titulo}}</h1>
+<div class="mb-3 d-flex justify-content-center">
+  <form class="d-flex" role="search">
+    <div class="input-group">
+      <input id="searchQuery" name="searchQuery" [(ngModel)]="search" class="form-control" type="search" placeholder="{{'search'|translate}}" aria-label="Search" style="width: 350px;">
+      <button (click)="Obtenerdatos()" class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+    </div>
+  </form>
+</div>
+  <table class="table table-primary">
+    <thead>
+      <tr>
+        <th class="text-center">Titulo</th>
+        <th class="text-center">Enlace</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="searchResults.length > 0" >
+      <tr *ngFor="let manga of searchResults">
+        <td>{{manga.title}} <button class="submit"><i class="bi bi-arrow-down-square-fill"></i></button></td>
+        <td><a target="_blank" href="{{manga.url}}">Ver mas detalle</a></td>
+      </tr>
+    </tbody>
+  </table>
+
+
