--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
               <h5 class="card-title">{{'book'|translate}}</h5>
               <p class="card-text">{{parrafo}}</p>
               <div class="d-flex justify-content-center">
-                <a href="#" class="btn btn-primary" routerLink="/Libros">Abrir</a>
+                <a href="#" class="btn btn-primary" routerLink="/Home/Libros">Abrir</a>
               </div>
             </div>
           </div>
@@ -44,7 +44,7 @@
               <h5 class="card-title">{{'Play'|translate}}</h5>
               <p class="card-text">{{parrafo}}</p>
               <div class="d-flex justify-content-center">
-                <a href="#" class="btn btn-primary" routerLink="/Juegos">Abrir</a>
+                <a href="#" class="btn btn-primary" routerLink="/Home/Juegos">Abrir</a>
               </div>
             </div>
           </div>
@@ -63,7 +63,7 @@
               <h5 class="card-title">{{'News'|translate}}</h5>
               <p class="card-text">{{parrafo}}</p>
               <div class="d-flex justify-content-center">
-                <a href="#" class="btn btn-primary" routerLink="/Noticias">Abrir</a>
+                <a href="#" class="btn btn-primary" routerLink="/Home/Noticias">Abrir</a>
               </div>
             </div>
           </div>
