crear un servicio get del backend, crear un boton para subir archivos

--- a/src/app/carrousel/carrousel.component.html
+++ b/src/app/carrousel/carrousel.component.html
@@ -2,7 +2,7 @@
   <carousel class="carousel" [itemsPerSlide]="1">
     <slide>
       <div>
-        <img src="https://img.freepik.com/fotos-premium/escenografia-anime-ciudad-vista-ciudad-ciudad-fondo_902639-39489.jpg" alt="Slide 1" class="d-block w-100" style="height: 300px;">
+        <img src="https://img.freepik.com/fotos-premium/escenografia-anime-ciudad-vista-ciudad-ciudad-fondo_902639-39489.jpg" alt="" class="d-block w-100" style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
           <h5 class="text-dark">Slide 1</h5>
           <p class="text-dark">Texto para la imagen 1.</p>
@@ -11,7 +11,7 @@
     </slide>
     <slide>
       <div>
-        <img src="https://pm1.aminoapps.com/6198/14a5e486ef130d9705cffad1a17888d27d79e1ce_hq.jpg" alt="Slide 2" class="d-block w-100 " style="height: 300px;">
+        <img src="https://pm1.aminoapps.com/6198/14a5e486ef130d9705cffad1a17888d27d79e1ce_hq.jpg" alt="" class="d-block w-100 " style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
           <h5 class="text-dark">Slide 2</h5>
           <p class="text-dark">Texto para la imagen 2.</p>
@@ -20,7 +20,7 @@
     </slide>
     <slide>
       <div>
-        <img src="https://lafrikileria.com/blog/wp-content/uploads/2023/07/robots-mecha-japoneses-anime.jpg" alt="Slide 3" class="d-block w-100 " style="height: 300px;">
+        <img src="https://lafrikileria.com/blog/wp-content/uploads/2023/07/robots-mecha-japoneses-anime.jpg" alt="" class="d-block w-100 " style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
           <h5 class="text-dark">Slide 3</h5>
           <p class="text-dark">Texto para la imagen 3.</p>
@@ -29,7 +29,7 @@
     </slide>
     <slide>
       <div>
-        <img src="assets/Images/Paisaje.png" alt="Slide 3" class="d-block w-100 " style="height: 300px;">
+        <img src="assets/Images/Paisaje.png" alt="" class="d-block w-100 " style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
           <h5 class="text-dark">Slide 4</h5>
           <p class="text-dark">Paisaje.</p>
@@ -38,10 +38,19 @@
     </slide>
     <slide>
       <div>
-        <img src="https://gifsec.com/wp-content/uploads/2022/11/dark-anime-gif-1.gif" alt="Slide 3" class="d-block w-100 " style="height: 300px;">
+        <img src="https://gifsec.com/wp-content/uploads/2022/11/dark-anime-gif-1.gif" alt="" class="d-block w-100 " style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
           <h5 class="text-dark">Slide 5</h5>
           <p class="text-dark">Texto para la Imagen 5.</p>
+        </div>
+      </div>
+    </slide>
+    <slide>
+      <div>
+        <img src="https://www.ui1.es/sites/default/files/blog/images/minima_neurociencia.jpg" alt="" class="d-block w-100 " style="height: 300px;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark">Slide 6</h5>
+          <p class="text-dark">Texto para Imagen 6</p>
         </div>
       </div>
     </slide>
