--- a/src/app/historia/historia.component.html
+++ b/src/app/historia/historia.component.html
@@ -3,7 +3,7 @@
   <form class="d-flex" role="search">
     <div class="input-group">
       <input id="searchQuery" name="searchQuery" [(ngModel)]="searchQuery" class="form-control" type="search" placeholder="{{'search'|translate}}" aria-label="Search" style="width: 350px;">
-      <button (click)="optenerdata()" (click)="sonido()" class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+      <button (click)="optenerdata()"  class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
     </div>
   </form>
 </div>
@@ -11,8 +11,8 @@
 
 <div class="row" *ngIf="searchResults.length > 0">
   <div class="col-4" *ngFor="let anime of searchResults">
-    <div class="alert alert-primary" role="alert">
-      <button class="btn btn-outline-success" type="button" (click)="anime.showDetails = !anime.showDetails">{{ anime.showDetails ? 'Ocultar detalles' : 'Mostrar detalles' }}</button>
+    <div class="alert alert-primary d-grid gap-2" role="alert">
+      <button class="btn btn-outline-success" type="button" (mouseover)="sonido()" (click)="anime.showDetails = !anime.showDetails">{{ anime.showDetails ? 'Ocultar detalles' : 'Mostrar detalles' }}</button>
       <div class="card card-body" *ngIf="anime.showDetails">
         <p class="text-center"><b>{{ anime.title }}</b></p>
         <p>{{ anime.synopsis }}</p>
