--- a/src/app/home/news/news.component.css
+++ b/src/app/home/news/news.component.css
@@ -3,4 +3,21 @@ img {
   height: 50%;
 }
 
+.form-group {
+  margin-bottom: 1rem;
+}
 
+input[type="file"] {
+  display: none;
+}
+
+.custom-custom-file {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.custom-custom-file:hover {
+  background-color: #f5f5f5;
+}
