--- a/src/app/home/news/news.component.html
+++ b/src/app/home/news/news.component.html
@@ -1,11 +1,24 @@
 <h1 class="text-center">Noticias</h1>
 <div class="row">
-  <div class="col-4" *ngFor="let noticia of noticias">
-    <div class="card card-body">
-      <img src="{{noticia.img}}" alt="">
-      <p>{{noticia.titulo}}</p>
-      <p>{{noticia.Contenido}}</p>
-      <p>{{noticia.fecha}}</p>
+  <div class="col-4" *ngFor="let archivo of listarchivo">
+    <div class="alert alert-primary" role="alert">
+      <p class="text-center"><b>{{ archivo.name }}</b></p>
+      <p>{{ archivo.content }}</p>
+      <p>{{ archivo.date }}</p>
+      <button class="btn btn-primary">Vista previa</button>
     </div>
   </div>
 </div>
+
+<div class="form-group">
+  <label for="file">Seleccionar archivo:</label>
+  <div class="custom-file">
+    <input type="file" class="custom-file-input" id="file" (change)="handleFileInput($event)">
+    <label class="custom-file-label" for="file">Elegir archivo</label>
+  </div>
+</div>
+
+<div *ngIf="fileUrl">
+  <img [src]="fileUrl" alt="Archivo cargado">
+</div>
+
