--- a/src/app/page/registro/registro.component.html
+++ b/src/app/page/registro/registro.component.html
@@ -1,30 +1,38 @@
 <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
   <div class="alert alert-primary" role="alert">
     <p class="text-center"><b>REGISTRO</b></p>
-    <form [formGroup] = "registro" (submit) = "Registro()">
+    <form [formGroup]="registro">
       <div class="form-group">
         <label for="InputUser">User</label>
         <div class="col-lg-25">
-          <input formControlName = "usuario" name= "user" type="text" class="form-control" id="InputUser" aria-describedby="emailHelp" placeholder="User">
+          <input formControlName="usuario" type="text" class="form-control" id="InputUser" aria-describedby="emailHelp" placeholder="User" required>
           <span *ngIf="registro.get('usuario')?.invalid && registro.get('usuario')?.touched" class="text-danger">Ingrese un nombre de usuario</span>
         </div>
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <div class="col-lg-25">
-          <input  formControlName = "correo" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <input formControlName="correo" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
           <span *ngIf="registro.get('correo')?.invalid && registro.get('correo')?.touched" class="text-danger">Ingrese su correo</span>
         </div>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
         <div class="col-lg-25">
-          <input formControlName = "contraseña" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          <input formControlName="contraseña" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" required>
           <span *ngIf="registro.get('contraseña')?.invalid && registro.get('contraseña')?.touched" class="text-danger">Ingrese una contraseña</span>
         </div>
       </div>
       <br>
       <button type="submit" class="btn btn-success w-100" [disabled]="registro.invalid">Registrarse</button>
     </form>
+    <div *ngIf="registro.valid" class="alert alert-success mt-3" role="alert">
+      ¡Registro exitoso!
+    </div>
+    <div *ngIf="registro.invalid && registro.touched" class="alert alert-danger mt-3" role="alert">
+      ¡Por favor complete todos los campos!
+    </div>
   </div>
 </div>
+
+
