Modificacion del Nadvar y card en home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,7 +42,7 @@
           <div class="flip-card-back">
             <div class="card-body">
               <h5 class="card-title">{{'Play'|translate}}</h5>
-              <p class="card-text">{{parrafo}}</p>
+              <p class="card-text">{{parrafo2}}</p>
               <div class="d-flex justify-content-center">
                 <a (mouseover)="reproducir2()" href="#" class="btn btn-primary" routerLink="/Home/Juegos">Abrir</a>
               </div>
@@ -61,7 +61,7 @@
           <div class="flip-card-back">
             <div class="card-body">
               <h5 class="card-title">{{'News'|translate}}</h5>
-              <p class="card-text">{{parrafo}}</p>
+              <p class="card-text">{{parrafo3}}</p>
               <div class="d-flex justify-content-center">
                 <a (mouseover)="reproducir3()" href="#" class="btn btn-primary" routerLink="/Home/Noticias">Abrir</a>
               </div>
