--- a/src/app/nadvar/nadvar.component.html
+++ b/src/app/nadvar/nadvar.component.html
@@ -12,6 +12,17 @@
         <li class="nav-item">
           <a class="nav-link active Ayuda-link" routerLink="/Informacion"><i class="bi bi-question-octagon"><b>{{'Information'|translate}}</b></i></a>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link active Ayuda-link" role="button" data-bs-toggle="dropdown"><i class="bi bi-question-octagon"><b>Categorias</b></i></a>
+          <ul class="dropdown-menu">
+            <li><a (click)="click()" class="dropdown-item" >Documentales</a></li>
+            <li><a (click)="click()" class="dropdown-item" >Entretimiento</a></li>
+            <li><a (click)="click()" class="dropdown-item" >Arte</a></li>
+            <li><a (click)="click()" class="dropdown-item" >Ciencias</a></li>
+            <li><a (click)="click()" class="dropdown-item" >Conocimientos</a></li>
+            <li><a (click)="click()" class="dropdown-item" >Tecnologias</a></li>
+          </ul>
+        </li>
       </ul>
 
       <div class="d-flex justify-content-center align-items-center">
