Modificacion de titulo carrusel prueba

--- a/src/app/carrousel/carrousel.component.html
+++ b/src/app/carrousel/carrousel.component.html
@@ -4,7 +4,7 @@
       <div>
         <img src="https://img.freepik.com/fotos-premium/escenografia-anime-ciudad-vista-ciudad-ciudad-fondo_902639-39489.jpg" alt="" class="d-block w-100" style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Slide 1</h5>
+          <h5 class="text-dark">Imagen 1</h5>
           <p class="text-dark">Texto para la imagen 1.</p>
         </div>
       </div>
@@ -13,7 +13,7 @@
       <div>
         <img src="https://pm1.aminoapps.com/6198/14a5e486ef130d9705cffad1a17888d27d79e1ce_hq.jpg" alt="" class="d-block w-100 " style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Slide 2</h5>
+          <h5 class="text-dark">Imagen 2</h5>
           <p class="text-dark">Texto para la imagen 2.</p>
         </div>
       </div>
@@ -22,7 +22,7 @@
       <div>
         <img src="https://lafrikileria.com/blog/wp-content/uploads/2023/07/robots-mecha-japoneses-anime.jpg" alt="" class="d-block w-100 " style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Slide 3</h5>
+          <h5 class="text-dark">Imagen 3</h5>
           <p class="text-dark">Texto para la imagen 3.</p>
         </div>
       </div>
@@ -31,7 +31,7 @@
       <div>
         <img src="assets/Images/Paisaje.png" alt="" class="d-block w-100 " style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Slide 4</h5>
+          <h5 class="text-dark">Imagen 4</h5>
           <p class="text-dark">Paisaje.</p>
         </div>
       </div>
@@ -40,7 +40,7 @@
       <div>
         <img src="https://gifsec.com/wp-content/uploads/2022/11/dark-anime-gif-1.gif" alt="" class="d-block w-100 " style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Slide 5</h5>
+          <h5 class="text-dark">Imagen 5</h5>
           <p class="text-dark">Texto para la Imagen 5.</p>
         </div>
       </div>
@@ -49,7 +49,7 @@
       <div>
         <img src="https://www.ui1.es/sites/default/files/blog/images/minima_neurociencia.jpg" alt="" class="d-block w-100 " style="height: 300px;">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="text-dark">Slide 6</h5>
+          <h5 class="text-dark">Imagen 6</h5>
           <p class="text-dark">Texto para Imagen 6</p>
         </div>
       </div>
